clusters/k3s/kube-system/sealed-secrets-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sealed-secrets
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: sealed-secrets.k8s.kilchhofer.info
    http:
      paths:
      - path: /v1/cert.pem
        backend:
          serviceName: sealed-secrets
          servicePort: 8080
