clusters/k3s/kube-system/hubble-ui-oauth2-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-ui-oauth2-proxy
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: authentication-proxy
      app.kubernetes.io/name: oauth2-proxy
      app.kubernetes.io/instance: hubble-ui-oauth2-proxy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress
          podSelector:
            matchLabels:
              app.kubernetes.io/component: envoy
              app.kubernetes.io/instance: projectcontour-internal
